# endstone-easyhotpotato

./: .gitignore  README.md  README_EN.md  build-dev.bat  build-dev.ps1  build-whl.ps1  pyproject.toml  setup.py  update_versions.json
src/endstone_easyhotpotato/: __init__.py  bstats.py  easyhotpotato.py
